<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>plotjuggler_msgs</name>
    <version>0.2.2</version>
    <description>Special Messages for PlotJuggler</description>
    <maintainer email="davide.faconti@gmail.com">daf</maintainer>
    <license>MIT</license>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

    <depend condition="$ROS_VERSION == 1">message_generation</depend>
    <depend condition="$ROS_VERSION == 1">message_runtime</depend>

    <depend>std_msgs</depend>
    
    <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

    <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
    <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

    <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
